# minilaunch

./: .gitignore  CMakeLists.txt  README.md  launchmath.cpp  launchmath.h  launchmath_test.cpp  launchmath_test.pro  main.cpp  units.cpp  units.h
tests/: launchmath_test.cpp  units_test.cpp
